<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SplashDemo0</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="welcome_to_infuse">Welcome To INFUSE</string>
    <string name="test">TEST</string>
    <string name="ty_week">TY Week</string>
    <string name="a_week_dedicated_to_showcasing_a_career_at_ericsson_and_how_ericsson_interacts_with_the_world">A week dedicated to showcasing a career at Ericsson and how Ericsson interacts with the world</string>
    <string name="tech_day">Tech Day</string>
    <string name="a_day_showcasing_technological_advances_and_ongoing_project_within_ericsson">A day showcasing technological advances and ongoing project within Ericsson</string>
    <string name="career_talk">Career Talk</string>
    <string name="blah_blah_blah" tools:ignore="Typos">blah blah blah</string>
    <string name="school_tour">School Tour</string>
    <string name="aaaaaaaaaaaaaaaaa">aaaaaaaaaaaaaaaaa</string>
    <string name="website_videos">Website Videos</string>
    <string name="naaaaaaaaah">naaaaaaaaah</string>
    <string name="girls_in_ict">Girls in ICT</string>
    <string name="hbudecihecdeokjedmckoedko">hbudecihecdeokjedmckoedko</string>
    <string name="android_internship">Android Internship</string>
    <string name="whhyyyyyyyy">whhyyyyyyyy</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_infuse_ericsson_com">Email: infuse@ericsson.com</string>
    <string name="phone_086_234_5678">Phone: (086) 234 5678</string>
    <string name="website_www_ericsson_com">Website: www.ericsson.com</string>
    <string name="ty_week_na_week_dedicated_to_showcasing_a_career_at_ericsson_and_how_ericsson_interacts_with_the_world">TY Week\nA week dedicated to showcasing a career at Ericsson and how Ericsson interacts with the world</string>
    <string name="tech_day_na_day_showcasing_technological_advances_and_ongoing_project_within_ericsson">Tech Day\nA day showcasing technological advances and ongoing project within Ericsson</string>
    <string name="career_talk_n_placeholder">Career Talk\n[placeholder]</string>
    <string name="school_tour_n_placeholder">School Tour\n[placeholder]</string>
    <string name="website_videos_n_placeholder">Website Videos\n[placeholder]</string>
    <string name="girls_in_ict_n_placeholder">Girls In ICT\n[placeholder]</string>
    <string name="website_video">Website Videos\n[placeholder]</string>
    <string name="career_talk_ntalk_to_people_who_work_in_ericsson_and_gain_valuable_insight_into_a_career_at_ericsson">Career Talk\nTalk to people who work in Ericsson and gain valuable insight into a career at Ericsson</string>
    <string name="school_tour_nlearn_more_about_the_different_types_of_school_tours_ericsson_offers">School Tour\nLearn more about the different types of school tours Ericsson offers</string>
    <string name="website_videos_nlearn_scratch_and_micro_bit_with_these_helpful_and_easy_to_follow_videos">Website Videos\nLearn Scratch and Micro:bit with these helpful and easy to follow videos</string>
    <string name="girls_in_ict_n_describes_and_uses_statistics_to_demonstrate_the_importance_of_girls_in_ict">Girls In ICT\n Describes and uses statistics to demonstrate the importance of girls in ICT</string>
    <string name="android_internship_important_information_about_an_internship_as_a_software_engineer_and_how_to_apply">Android Internship\nImportant information about an internship as a Software Engineer and how to apply</string>
    <string name="header">Header</string>
    <string name="footer">Footer</string>
    <string name="girls_ict">GIRLS ICT</string>
    <string name="but_across_the_entire_tech_sector_the_percentage_of_women_in_tech_leadership_roles_is_trending_down_currently_at_28_8_according_to_ddi_s_2023_global_leadership_forecast">But across the entire tech sector, the percentage of women in tech leadership roles is trending down, currently at 28.8%, according to DDI\'s 2023 Global Leadership Forecast</string>
    <string name="the_future_of_stem_studies_as_a_career_choice_is_truly_exciting_research_shows_that_more_than_65_of_our_students_will_work_in_jobs_that_don_t_exist_today_by_engaging_participants_in_girls_in_ict_day_we_hope_to_help_prepare_for_that_future_encouraging_more_and_more_girls_to_consider_careers_in_ict_technology_keeps_the_world_connected_ericsson_is_a_master_of_this_connection_why_is_ict_important_for_girls_when_women_and_girls_have_access_to_the_internet_they_have_the_opportunity_to_start_new_businesses_sell_products_to_new_markets_find_better_paid_jobs_and_access_education_as_well_as_health_and_financial_services">The future of STEM studies as a career choice is truly exciting. Research shows that more than 65% of our students will work in jobs that don’t exist today. By engaging participants in Girls in ICT Day, we hope to help prepare for that future, encouraging more and more girls to consider careers in ICT. Technology keeps the world connected. Ericsson is a master of this connection! Why is ICT important for girls? When women and girls have access to the Internet, they have the opportunity to start new businesses, sell products to new markets, find better-paid jobs and access education as well as health and financial services.</string>
    <string name="girls_in_ict1">Girls In ICT</string>
    <string name="tech_day_gives_amazing_opportunities_to_schools_around_ireland_they_get_a_chance_to_come_on_site_to_ericsson_and_present_their_young_scientist_projects_and_showcase_their_amazing_work_last_yearmoate_community_school_presented_their_project_coding_the_solution_to_ireland_s_scam_call_issue_which_they_were_awarded_first_place_in_the_junior_technology_category_at_bt_young_scientist_2022">Tech day gives amazing opportunities to schools around Ireland they get a chance to come on site to ericsson and present their young scientist projects and showcase their amazing work last yearMoate Community School presented their project_coding the solution to Ireland\'s scam call issue which they were awarded first place in the junior technology category at BT young scientist 2022</string>
    <string name="ericsson_2022_tech_day">Ericsson 2022 Tech Day</string>
    <string name="tech_day_gives_amazing_opportunities_to_schools_around_ireland_they_get_a_chance_to_come_on_site_to_ericsson_and_present_their_young_scientist_projects_and_showcase_their_amazing_work_last_year_moate_community_school_presented_their_project_coding_the_solution_to_ireland_s_scam_call_issue_which_they_were_awarded_first_place_in_the_junior_technology_category_at_bt_young_scientist_2022">Tech Day gives amazing opportunities to schools around Ireland. They get a chance to come on site to Ericsson and present their young scientist projects and showcase their amazing work. Last Year Moate Community School presented their project \'Coding the solution to Ireland\'s scam call issue\', which they were awarded First Place in the Junior Technology category at BT Young Scientist (2022).</string>
    <string name="some_of_the_activities_and_presentations_that_take_place_on_tech_day_include_a_description_on_what_5g_is_and_how_this_technology_has_developed_we_learn_how_ericsson_has_worked_on_helping_with_the_recovery_of_countries_and_places_that_have_been_hit_by_natural_disasters_and_have_no_contact_with_anyone">Some of the activities and presentations that take place on Tech Day include a description on what 5G is and how this technology has developed. We learn how Ericsson has worked on helping with the recovery of countries and places that have been hit by natural disasters and have no contact with anyone.</string>
    <string name="why_tech_day_is_beneficial">Why Tech Day is Beneficial</string>
    <string name="click_here_to_see_ericsson_2022_tech_day">Click Here to See Ericsson 2022 Tech Day !</string>
    <string name="ericsson_primary_introduction_to_code_promotes_stem_from_an_early_age_and_encourages_the_students_to_study_stem_subjects_as_they_progress_to_the_secondary_level_education_system_the_material_provided_aims_to_support_teachers_to_bring_fun_coding_projects_into_their_primary_school_curriculum_they_use_scratch_micro_bit_and_html_let_us_look_deeper_into_micro_bit">Ericsson Primary Introduction to Code promotes STEM from an early age and encourages the students to study STEM subjects as they progress to the secondary level education system. The material provided aims to support teachers to bring fun coding projects into their primary school curriculum. They use scratch, micro:bit and html, let us look deeper into micro; bit.</string>
    <string name="while_students_are_in_ericsson_they_will_be_given_a_tour_of_the_ericsson_data_center_this_is_where_ericsson_store_all_their_hardware_drives_and_cooling_systems_they_always_keep_a_reserve_of_each_thing_in_case_one_fails_they_have_a_backup_until_the_other_is_fixed">While students are in Ericsson, they will be given a tour of the Ericsson data center. This is where Ericsson store all their hardware, drives and cooling systems. They always keep a reserve of each thing in case one fails they have a backup until the other is fixed.</string>
    <string name="press_here_to_watch_a_video_of_a_tour_of_the_data_center">Press here to watch a video of a tour of the Data Center</string>
    <string name="microbit_video">Microbit Video</string>
    <string name="learn_more">Learn More</string>
    <string name="press_to_refresh_page">press to refresh page</string>
    <string name="layout_to_hold_text_segments">Layout to hold text segments</string>
    <string name="text_body_1">Text body 1</string>
    <string name="contactstuff">contactstuff</string>
    <string name="mainpagecontent">Ericsson professionals volunteer their time to give career talks to local schools. They walk through a day in the life of a software engineer and their path to Ericsson, thus allowing students the opportunity to see the possibilities a career in software engineering presents.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="contactText">Career talks: We are currently offering virtual presentations for schools, please contact us if this is something you’re interested in. Also If you would like your class to visit Ericsson Athlone campus, please contact us.</string>
    <string name="campus_picture">campus_picture</string>
    <string name="career_options">Career Options</string>
    <string name="return_home_button">return home button</string>
    <string name="press_to_return_home">press to return home</string>
</resources>