<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CareersActivity">

    <ImageButton
        android:id="@+id/ericssonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchHome"
        android:text="@string/return_home_button"
        android:contentDescription="@string/press_to_return_home"
        app:srcCompat="@drawable/ericssonlogo_x50" />

    <ImageView
        android:id="@+id/campus_picture"
        android:layout_width="wrap_content"
        android:layout_height="295dp"
        android:contentDescription="@string/campus_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/ericsson_software_campus" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/contentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactText"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="488dp"
                android:layout_height="48dp"
                android:autofillHints="enter name"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="488dp"
                android:layout_height="48dp"
                android:autofillHints="enter email address"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="488dp"
                android:layout_height="48dp"
                android:autofillHints="enter message here"
                android:hint="@string/message"
                android:inputType="textMultiLine" />


        </LinearLayout>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:text="@string/submit"
            android:background="@drawable/button_custom" />

    </LinearLayout>

</LinearLayout>