<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".careersmainActivity">


    <ImageButton
        android:id="@+id/refreshBtn"
        android:layout_width="101dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/press_to_refresh_page"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ericssonlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/layout_to_hold_text_segments"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="454dp"
            android:layout_height="398dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/text_body_1"
            android:gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/careertalks" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="198sp"
            android:contentDescription="@string/contactstuff"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/mainpagecontent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contactSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contactstuff" />

        <Button
            android:id="@+id/ConstraintLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="launchCareers"
            android:scaleType="fitCenter"
            android:text="@string/learn_more"
            android:textColorLink="#3572DE"
            android:background="@drawable/button_custom"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/careeroptn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:onClick="launchpage"
            android:text="@string/career_options"
            android:textColorLink="#ff7f50"
            android:textSize="15sp"
            tools:text="Life at Ericsson Athlone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>